Added security in Swagger API doc
