# config/swagger-contacts-output.json
@@ -17,6 +17,18 @@
     "https",
     "http"
   ],
+  "securityDefinitions": {
+    "googleAuth": {
+      "type": "oauth2",
+      "flow": "accessCode",
+      "authorizationUrl": "https://accounts.google.com/o/oauth2/v2/auth",
+      "tokenUrl": "https://oauth2.googleapis.com/token",
+      "scopes": {
+        "profile": "Access your profile info",
+        "email": "Access your email address"
+      }
+    }
+  },
   "paths": {
     "/": {
       "get": {
@@ -52,8 +64,19 @@
           },
           "400": {
             "description": "Invalid request"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
-        }
+        },
+        "security": [
+          {
+            "googleAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       },
       "get": {
         "tags": [
@@ -68,10 +91,21 @@
           "400": {
             "description": "Invalid request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Not Found"
           }
-        }
+        },
+        "security": [
+          {
+            "googleAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       }
     },
     "/contacts/{id}": {
@@ -97,10 +131,21 @@
           "400": {
             "description": "Invalid request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Contact not found"
           }
-        }
+        },
+        "security": [
+          {
+            "googleAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       },
       "put": {
         "tags": [
@@ -133,10 +178,21 @@
           "400": {
             "description": "Invalid request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Contact not found"
           }
-        }
+        },
+        "security": [
+          {
+            "googleAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       },
       "delete": {
         "tags": [
@@ -160,10 +216,21 @@
           "400": {
             "description": "Invalid request"
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Contact not found"
           }
-        }
+        },
+        "security": [
+          {
+            "googleAuth": [
+              "profile",
+              "email"
+            ]
+          }
+        ]
       }
     }
   },
